fixed Beautonomy layout bugs

--- a/UI/components/ChallengesAndSolutions/styles/beautonomy.scss
+++ b/UI/components/ChallengesAndSolutions/styles/beautonomy.scss
@@ -74,6 +74,12 @@
 
   &.secondSectionView {
     .contentContainer {
+      max-width: 790px;
+
+      .infoContainer {
+        max-width: 379px;
+      }
+
       .imageBundle {
         position: absolute;
 
