--- a/UI/sections/CaseStudiesIntro/styles/beautonomy.scss
+++ b/UI/sections/CaseStudiesIntro/styles/beautonomy.scss
@@ -20,8 +20,9 @@
   }
 
   .image {
-    width: 1026px;
-    left: 63%;
+    width: 1226px;
+    height: 686px;
+    left: 55%;
 
     @include phone {
       width: 100%;
