--- a/UI/sections/WireframesSection/styles/beautonomy.scss
+++ b/UI/sections/WireframesSection/styles/beautonomy.scss
@@ -1,5 +1,5 @@
 .beautonomy {
-  padding-bottom: 30px;
+  padding-bottom: 40px;
   
   [data-description] {
     max-width: 519px;
